--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --actionColor: darkred;
+  --white: white;
+}
+.button.inverted {
+  --mainColor: transparent;
+  --secondaryColor: var(--white);
+}
