Styling Loginscreen almost complete

--- a/client/src/components/Forms/LoginForm/LoginForm.module.css
+++ b/client/src/components/Forms/LoginForm/LoginForm.module.css
@@ -3,16 +3,17 @@
     box-sizing: border-box;
     display: inline-grid;
     place-content: center;
-    width: 50%;
-    height: 50vh;
+    width: 50vw;
+    height: 60vh;
     background: #ececec;
   }
   
 .Heading {
-    margin: 0;
+    margin: 2rem;
     color: #333333;
     position: absolute;
     border: red 1px solid;
+    font-size: 1.5rem;
 }
 
 form {
